Updated PersonName to the latest; Fixed spacing; Name construction consistency

--- a/views/cc7/css/cc7.css
+++ b/views/cc7/css/cc7.css
@@ -527,6 +527,7 @@ div.cc7Table th[id] {
 }
 #hierarchyView ul {
   list-style: none;
+  margin-bottom: 5px;
 }
 #hierarchyView li {
   margin-bottom: 0.3em;
